css/colors.css
/* ... */
html[theme*="dark"] .chat-container .input-area-default .input-c.border[data-v-64664322]{
    border: 1px solid var(--Ga2);
}

html[theme*="dark"] .static-popup[data-v-58db55ec]{
    border: 1px solid var(--Ga2);
    background-color: var(--bg1);
}

html[theme*="dark"] .emoji[data-v-348ac5d4]{
    background-color: var(--bg1);
}

html[theme*="dark"] .title[data-v-58db55ec]{
    color: var(--text1);
}

html[theme*="dark"] .pagination[data-v-ea36f0c2]{
    background-color: var(--bg2);
}

html[theme*="dark"] .emoji-cover.selected[data-v-ea36f0c2]{
    background-color: var(--bg1);
}

html[theme*="dark"] .page-controller .prev[data-v-ea36f0c2]:hover, html[theme*="dark"] .page-controller .next[data-v-ea36f0c2]:hover{
    background-color: var(--bg1);
}

html[theme*="dark"] .paging-box-big .current,html[theme*="dark"] .paging-box-big .next, html[theme*="dark"] .paging-box-big .prev, html[theme*="dark"] .paging-box-big .tcd-number, html[theme*="dark"] .paging-box-big .dian{
    background-color: var(--bg2);
    border: solid 1px var(--Ga2);
}

html[theme*="dark"] .elec .elec-count{
    color: var(--text2);
}

html[theme*="dark"] .normal-article-holder a{
    color: var(--bili-pink);
}

html[theme*="dark"] .paging-box .tcd-number{
    color: var(--text1);
}

html[theme*="dark"] .bb-comment .comment-list .list-item:last-child .con, html[theme*="dark"] .comment-bilibili-fold .comment-list .list-item:last-child .con{
    border-bottom-color: var(--Ga2);
}

html[theme*="dark"] rect.st0 {
    fill: none!important;
}

html[theme*="dark"] .user-card{

}

html[theme*="dark"] #page-series-detail .channel-detail .content .breadcrumb .item, html[theme*="dark"] #page-series-index .channel-item .channel-name{
    color: var(--text1);
}

html[theme*="dark"] .favInfo-box .collection-details .title .title-name{
    color: var(--text1);
}

html[theme*="dark"] .favInfo-box .collection-cover .shadow-first{
    background: #343434;
}

html[theme*="dark"] .favInfo-box .collection-cover .shadow-second{
    background: #565656;
}

html[theme*="dark"] .song-title, html[theme*="dark"] .song-intro, html[theme*="dark"] .song-play-num span, html[theme*="dark"] .b-head-t, html[theme*="dark"] .b-head, html[theme*="dark"] .album-title, html[theme*="dark"] .similar-song-menu .similar-right .title{
    color: var(--text1);
}

html[theme*="dark"] .follow-container .follow-right .follow-intro[data-v-5d8dc527]{
    color: var(--text1);
}

html[theme*="dark"] #song-marks .bb-comment{
    background-color: var(--bg1_float) !important;
}

html[theme*="dark"] .bilibili-player{
    box-shadow: 0 0 8px var(--Ga2);
}

html[theme*="dark"] .bilibili-player-video-sendbar{
    background: var(--bg1);
}

html[theme*="dark"] .bilibili-player-video-info{
    color: var(--bpx-dmsend-info-font,#505050);
}

html[theme*="dark"] .bilibili-player-video-sendbar .bilibili-player-video-inputbar{
    background: var(--bg2_float);
}

html[theme*="dark"] .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input{
    background-color: var(--bg2_float);
    color: var(--text1);
}

html[theme*="dark"] .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap{
    border: 1px solid var(--Ga2);
}

html[theme*="dark"] .video-toolbar .ops>span, html[theme*="dark"] .video-toolbar .appeal-text{
    color: var(--text2);
}

html[theme*="dark"] .video-toolbar, html[theme*="dark"] .v-wrap .s_tag[data-v-7d651e8b]{
    border-bottom: 1px solid var(--line_regular);
}

html[theme*="dark"] .s_tag .tag-area .tag-item{
    background: var(--bg3);
    color: var(--text2);
    border: none;
}

html[theme*="dark"] .s_tag .tag-area .tag-item .tag-link, html[theme*="dark"] .s_tag .tag-area .tag-item .topic-link{
    color: var(--text2);
}

html[theme*="dark"] .player-auxiliary, html[theme*="dark"] .player-auxiliary-area{
    background-color: var(--bg1);
}

html[theme*="dark"] .player-auxiliary-area .player-auxiliary-collapse-playlist .bui-collapse-body, html[theme*="dark"] .player-auxiliary-area .player-auxiliary-collapse .bui-collapse-body{
    background-color: var(--bg2_float)
}

html[theme*="dark"] .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row{
    color: var(--text2);
}

html[theme*="dark"] .player-auxiliary-playlist-item-title, html[theme*="dark"] .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row span.danmaku-info-danmaku, html[theme*="dark"] .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-load-status.disabled{
    color: var(--text1);
}

html[theme*="dark"] .player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function [class*=player-auxiliary-danmaku-btn-], html[theme*="dark"] .player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function .player-auxiliary-danmaku-multiple-control,  html[theme*="dark"]  .player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function,   html[theme*="dark"] .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap, html[theme*="dark"] .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-load-status,  html[theme*="dark"] .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-btn-footer{
    background-color: var(--bg1)
}

html[theme*="dark"] .bui-button.bui-button-gray2{
    background-color: var(--bg1);
    color: var(--text1);
}
/* ... */

